k8s/biobank-be-deployment.yaml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: biobank-be
  namespace: biobank # è lo stesso namespace da utilizzare nei service
  labels:
    app: biobank-be
spec:
  replicas: 1
  selector:
    matchLabels:
      app: biobank-be
  template:
    metadata:
      labels:
        app: biobank-be
    spec:
      # necessario se immagini private
      # imagePullSecrets:
      #   - name: acr-secret-cs
      containers:
        - name: biobank-be
          image: khalld/biobank:latest
          ports:
          - containerPort: 9095
