k8s/sample-be-deployment.yaml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: sample-be
  namespace: biobanksprec
  labels:
    app: sample-be
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sample-be
  template:
    metadata:
      labels:
        app: sample-be
    spec:
      containers:
        - name: sample-be
          image: khalld/sample:latest
          imagePullPolicy: Always
          ports:
          - containerPort: 9092
