k8s/shipment-be-deployment.yaml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: shipment-be
  namespace: biobanksprec
  labels:
    app: shipment-be
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shipment-be
  template:
    metadata:
      labels:
        app: shipment-be
    spec:
      containers:
        - name: shipment-be
          image: khalld/shipment:latest
          ports:
          - containerPort: 9091
