k8s/sprecsample-be-deployment.yaml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: sprecsample-be
  namespace: biobanksprec
  labels:
    app: sprecsample-be
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sprecsample-be
  template:
    metadata:
      labels:
        app: sprecsample-be
    spec:
      containers:
        - name: sprecsample-be
          image: khalld/sprecsample:latest
          ports:
          - containerPort: 9094
