k8s/biobank-be-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: biobank-be-service
    namespace: biobanksprec
spec:
    type: LoadBalancer
    ports:
    - port: 9093 
    selector:
        app: biobank-be
