k8s/donor-be-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: donor-be-service
    # namespace: donor
spec:
    type: LoadBalancer # eventualmente usa loadBalancer per prendere l'IP metto il loadbalancer e quindi lo chiamo da usalo solo keycloak
    ports:
    - port: 9095
    selector:
        app: donor-be
