k8s/keycloak-db.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: keycloak-mysql-deployment
  # you can give any k8s component a label
  # are key/value apirs that are attached to k8s resoruces
  # identifier, which should be meaningful and relevant to users
  # but i possible share the same label. For PODS is required
  labels:
    app: keycloak-mysql
spec: # deploy specific specification
  replicas: 1 # how many pods want to create. 1 'cause is a Db
  selector: # identify a set of resources
    matchLabels: # match all pods match with labels ...
      # use app when you want to develop your application [best practice]
      app: keycloak-mysql
  template: # Blueprint for Pods defined by template. Is a configuration for pod
    metadata:
      labels:
        app: keycloak-mysql
    spec:
      containers:  # list of containers used to create by pod
      - image: mysql:5.7
        name: keycloak-db
        ports:
        - containerPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak-db-service # nome relativo a quello di configuraizone
spec:
  selector:
    app: keycloak-mysql  # select pods to forward the request to ...
  ports:
    - protocol: TCP
      port: 3360 # service port
      targetPort: 3360 # containerPort of deployment
