k8s/sample-be-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: sample-be-service
    namespace: sample
spec:
    type: LoadBalancer
    ports:
    - port: 9092
    selector:
        app: sample-be
