k8s/shipment-db.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: shipment-mysql-deployment
  namespace: biobanksprec
  # you can give any k8s component a label
  # are key/value apirs that are attached to k8s resoruces
  # identifier, which should be meaningful and relevant to users
  # but i possible share the same label. For PODS is required
  labels:
    app: shipment-mysql
spec: # deploy specific specification
  replicas: 1 # how many pods want to create. 1 'cause is a Db
  selector: # identify a set of resources
    matchLabels: # match all pods match with labels ...
      # use app when you want to develop your application [best practice]
      app: shipment-mysql
  template: # Blueprint for Pods defined by template. Is a configuration for pod
    metadata:
      labels:
        app: shipment-mysql
    spec:
      containers:  # list of containers used to create by pod
      - image: mysql:5.7
        name: shipment-db
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: init-script
          mountPath: /docker-entrypoint-initdb.d # we are mounting init-script volume in this directory. so init.sql file will be available here.
      volumes:
      - name: init-script # this volume holds downloaded init.sql file.
        configMap:
          name: shipment-mysql-config
---
apiVersion: v1
kind: Service
metadata:
  name: shipment-db-service # nome relativo a quello di configuraizone
  namespace: biobanksprec
spec:
  selector:
    app: shipment-mysql  # select pods to forward the request to ...
  ports:
    - protocol: TCP
      port: 3306 # service port
      targetPort: 3306 # containerPort of deployment
