k8s/sprecsample-be-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: sprecsample-be-service
    namespace: sprecsample
spec:
    type: LoadBalancer # eventualmente usa loadBalancer per prendere l'IP metto il loadbalancer e quindi lo chiamo da usalo solo keycloak
    ports:
    - port: 9094
    selector:
        app: sprecsample-be
